# focusflow

./: .gitignore  .muse_address  BUILD_EXE.bat  BUILD_README.md  DATA_QUALITY_REPORT.txt  ENTERPRISE_TECHNICAL_SPEC.md  FocusFlow_Launcher.ps1  GITHUB_INSTRUCTIONS.md  LICENSE  MUSE_USER_GUIDE.md  README.md  README_CLIENT.md  README_CLIENT.txt  RESET_SERVER.bat  START_DASHBOARD.bat  START_MUSE_SERVER.bat  Setup_FocusFlow.bat  TROUBLESHOOTING.md  USER_MANUAL.txt  Update_App.bat  architecture.html  ble_gatt_test.py  ble_scan.txt  ble_test.py  ble_test_result.txt  config.json  config.py  connection_control.html  connection_manager.py  dashboard.html  dashboard_therapeutic.js  database.py  diagnose_hardware.py  diagnostic_output.txt  focusflow.spec  future_plan.md  generate_quality_report.py  installer.iss  labstreaminglayer.cfg  main.js  (+22 more)
.github/workflows/: build-exe.yml
FocusFlow_V3/: .graphifyignore  AGENTS.md  README.md  dashboard_therapeutic.js  implementation_plan.md  index.html  package-lock.json  package.json
FocusFlow_V3/graphify-out/: GRAPH_REPORT.md  graph.html
FocusFlow_V3/src-tauri/: Cargo.toml  tauri.conf.json
FocusFlow_V3/src-tauri/src/: lib.rs  main.rs  screen_tracker.rs
FocusFlow_V3/src-tauri/src/database/: mod.rs  schema.rs  sync.rs
FocusFlow_V3/src-tauri/src/dsp/: artifacts.rs  features.rs  filters.rs  mod.rs  nlms.rs  sleep_pipeline.rs
FocusFlow_V3/src-tauri/src/hardware/: mod.rs  muse.rs  openbci.rs
landing_page/: index.html
recordings/: session_2026-02-01_17-10-05.csv
src/backend/: ai_coach.py  bluetooth_manager.py  bridge_keeper.py  (+9 more)
(+3 files in other folders)
