[package]
name = "focusflow-v3"
version = "3.0.0"
description = "FocusFlow V3 — Enterprise Neurotech Platform (Rust/Tauri)"
authors = ["Chahat Jain"]
edition = "2021"

[lib]
name = "focusflow_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── BLE (Bluetooth Low Energy) ──
btleplug = "0.11"

# ── DSP Math ──
rustfft = "6"
ndarray = "0.16"

# ── Async Runtime ──
tokio = { version = "1", features = ["full"] }

# ── Database ──
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# ── Serial (for OpenBCI) ──
serialport = "4"

# ── Logging ──
log = "0.4"
env_logger = "0.11"
futures = "0.3.32"
uuid = "1.23.0"
